--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://949588be-a425-4a1f-b782-95692d254fd8.preview.emergentagent.com
 WDS_SOCKET_PORT=443
