--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://f06cc568-9ee7-4abf-9efa-08d36a1c9848.preview.emergentagent.com
 WDS_SOCKET_PORT=443
