--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://app.gentag.ai
+REACT_APP_BACKEND_URL=https://516dd277-3d83-47d1-a51e-55feaba1949c.preview.emergentagent.com
 WDS_SOCKET_PORT=443
